<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/asclient"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backroundregister"
    android:paddingLeft="20dp"
    android:paddingTop="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="10dp"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/logoRegister"
        android:layout_width="201dp"
        android:layout_height="61dp"
        android:gravity="center"
        android:text="Register"
        android:textColor="@color/colorWhite"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.547"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <EditText
        android:id="@+id/nomRegister"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="45dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/inputbg"
        android:drawableLeft="@drawable/ic_person_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/entrez_votre_nom"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoRegister" />

    <EditText
        android:id="@+id/registerMail"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/inputbg"
        android:drawableLeft="@drawable/ic__email_24"
        android:drawablePadding="10dp"
        android:ems="10"

        android:hint="@string/entre_votre_mail"
        android:inputType="textEmailAddress"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nomRegister" />

    <EditText
        android:id="@+id/passwordlRegister"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/inputbg"
        android:drawableLeft="@drawable/ic__security_24"
        android:drawablePadding="10dp"
        android:ems="10"

        android:hint="@string/mot_de_passe"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerMail" />

    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/inputbg"
        android:drawableLeft="@drawable/ic__smartphone_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="Entrez votre téléphone"
        android:inputType="textPhonetic"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordlRegister" />

    <EditText
        android:id="@+id/adressUser"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/inputbg"
        android:drawableLeft="@drawable/ic__location_on_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="Entrez votre adresse"
        android:inputType="textPhonetic"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumber" />

    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="80dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/buttonbg"
        android:text="Register"
        android:textColor="@color/colorBlack"
        android:textSize="24sp"
        app:backgroundTint="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="@+id/adressUser"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/adressUser"
        app:layout_constraintTop_toBottomOf="@+id/adressUser" />

    <TextView
        android:id="@+id/alreadyhave"
        android:layout_width="174dp"
        android:layout_height="28dp"
        android:layout_marginStart="92dp"
        android:layout_marginLeft="92dp"
        android:layout_marginTop="28dp"
        android:text="Already have an account"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="@+id/loginB"
        app:layout_constraintHorizontal_bias="0.405"
        app:layout_constraintStart_toStartOf="@+id/register"
        app:layout_constraintTop_toBottomOf="@+id/register" />

    <CheckBox
        android:id="@+id/asHotelier"
        android:layout_width="142dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/inputbg"
        android:text="Hotelier"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/clientcheckBox"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/adressUser"
        app:layout_constraintTop_toBottomOf="@+id/adressUser" />

    <CheckBox
        android:id="@+id/clientcheckBox"
        android:layout_width="142dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/inputbg"
        android:text="Client"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/adressUser"
        app:layout_constraintTop_toBottomOf="@+id/adressUser" />

</androidx.constraintlayout.widget.ConstraintLayout>